# paper1

./: .gitignore  CMakeLists.txt  temp_doc43.txt
build_codex/: CMakeCache.txt
build_codex_nmake/: CMakeCache.txt  Makefile  cmake_install.cmake
build_codex_vs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  paper1.sln
paper1/: CMakeLists.txt  README.md  canfd_frame.cpp  canfd_frame.h  config.h  debug_tool.h  frame_packing.cpp  frame_packing.h  packing_scheme.cpp  packing_scheme.h  paper1.cpp  paper1.h  priority_allocation.cpp  priority_allocation.h  probabilistic_analysis.cpp  probabilistic_analysis.h  sa_algorithm.cpp  sa_algorithm.h  scheme.cpp  scheme.h  storage_layout.h
paper1/algorithm2/: algorithm2.cpp  algorithm2.h
paper1/backups/: frame_backup.cpp  frame_backup.h  signal_backup.cpp  signal_backup.h
paper1/packing_algorithms/: sa_algorithm.cpp  sa_algorithm.h
paper1/probabilistic_analysis/: no_retry.cpp  no_retry.h  normal.cpp  normal.h  paper2.cpp  paper2.h  retry.cpp  retry.h
paper1/signal_backup/: backup.cpp  backup.h
paper1/utils/: fixed_worker_pool.h
scripts/: export_summary_tables.py  export_wcrt_asil_td_tables.py  generate_all_figures.py  generate_bandwidth_and_cdf.py  plot_compare_summary.py  plot_ed_per_dataset_bandwidth.py  plot_foundation_fault_threshold.py  plot_retry_report.py  plot_signal_wcrt_cdf.py  plot_utils.py  plot_wcrt_avg_from_asil_td_tables.py  rebuild_ed_asild_schedulable_only.py  redraw_bandwidth_and_cdf_from_tabs.py  redraw_cdf_legend_variants.py  regenerate_range_until_schedulable.py  regenerate_until_schedulable.py  run_ed_asild_redundancy_experiment.py
storage/: cmp_result_2025828_14558.txt  cmp_result_202599_122440.txt  cmp_result_202599_123846.txt  cmp_result_202599_13017.txt  cmp_result_202599_132033.txt  cmp_result_202599_132048.txt  cmp_result_202599_141316.txt  cmp_result_202599_142857.txt  cmp_result_202599_143256.txt  cmp_result_202599_144829.txt  cmp_result_202599_144919.txt  cmp_result_202599_145721.txt  cmp_result_202599_145818.txt  cmp_result_202599_145944.txt  cmp_result_202599_15334.txt  cmp_result_202599_15547.txt  cmp_result_2026111_202616.txt  cmp_result_2026111_204851.txt  cmp_result_2026111_205035.txt  cmp_result_2026111_205352.txt  cmp_result_2026111_20566.txt  cmp_result_2026111_21244.txt  cmp_result_2026112_03326.txt  cmp_result_2026112_1360.txt  cmp_result_2026112_15617.txt  cmp_result_2026112_15851.txt  cmp_result_2026112_2421.txt  cmp_result_2026113_233655.txt  cmp_result_2026113_234952.txt  cmp_result_2026114_11126.txt  cmp_result_2026114_31810.txt  cmp_result_2026114_32115.txt  cmp_result_2026127_0536.txt  cmp_result_202618_102348.txt  cmp_result_202618_112226.txt  cmp_result_202618_112749.txt  (+397 more)
(+6460 files in other folders)
